--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js"
+    "start": "node src/server.js",
+    "start-dev": "nodemon src/server"
   },
   "author": "czaas",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "ejs": "^2.5.1",
-    "express": "^4.14.0"
+    "es6-promise": "^3.2.1",
+    "express": "^4.14.0",
+    "jquery": "^3.1.0",
+    "whatwg-fetch": "^1.0.0"
   }
 }
