--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.1",
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.1.0",
     "whatwg-fetch": "^1.0.0"
   }
